--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
+@keyframes border-radius-animation {
+    from {
+        border-radius: 0;
+    }
+    to {
+        border-radius: 50%;
+    }
+}
+
 body {
     text-align: center;
     padding: 0;
@@ -8,12 +17,18 @@ body {
     flex-flow: column;
 }
 
+h1 {
+    text-transform: uppercase;
+    font-family: Avenir;
+}
+
 .letters-container,
 .diamond-container {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .letters-container {
     margin-bottom: 1rem;
@@ -26,11 +41,45 @@ body {
 .diamond-letter {
     aspect-ratio: 1/1;
     width: 50px;
-    margin: .25rem;
     font-family: Avenir, serif;
+    margin: .75vmin;
 }
 
 .diamond-letter {
     margin: .25vmin;
     font-size: 1.5rem;
+}
+
+.letter-btn {
+    background-color: #D2F1E4;
+    border: 0;
+    position: relative;
+    cursor: pointer;
+}
+.letter-btn::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    bottom: 4px;
+    left: 4px;
+    z-index: -1;
+    transform: rotate(2deg);
+}
+
+.letter-btn:hover::after {
+    transform: rotate(-2deg);
+}
+
+.letter-btn,
+.letter-btn::after {
+    border-radius: 0;
+    transition: border-radius 0.5s ease;
+}
+
+.letter-btn--copied,
+.letter-btn--copied::after {
+    border-radius: 50%;
+    transition: border-radius 0.5s ease;
 }
